Started backend functionalities and Products routes and db models

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/JuanCamiloChafloque/eMart.git"
   },
-  "author": "",
+  "author": "Juan Camilo Chafloque",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JuanCamiloChafloque/eMart/issues"
