--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
   },
   "homepage": "https://github.com/JuanCamiloChafloque/eMart#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.3.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.0",
+    "nodemailer": "^6.7.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "concurrently": "^7.1.0",
